correction - removed word spacing between cards

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ img {
 .container {
   margin: 0 auto;
   width: 80%;
-  word-spacing: 8px;
+  word-spacing: -10px;
   text-align: center;
   padding: 15px 0;
 }
@@ -22,11 +22,12 @@ img {
 }
 
 .card {
-  width: calc(100% / 3 - 16px);
+  width: calc(100% / 3);
   position: relative;
   display: inline-block;
   margin-top: 5px;
   vertical-align: top;
+  padding: 0 5px;
 }
 
 .second-image {
